objects/SGR_Note_Detail__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id (no use)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GSPS_Plan_Note_Id__c</fullName>
        <label>Plan Note Id (no use)</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>Used in code to find the mapped product</description>
        <label>Key (no use)</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Group (no use)</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Note Detail</relationshipLabel>
        <relationshipName>Note_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order(No used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Symbol__c</fullName>
        <label>Symbol</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <label>Plan Note Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Note Detail</pluralLabel>
    <recordTypes>
        <fullName>SGR_Note_Detail_Record_Type</fullName>
        <active>true</active>
        <label>Note Detail Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>